markant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
  labels:
    app: nginx
spec:
  selector:
    app: nginx
  ports:
  - name: http
    port: 80
    targetPort: http
  type: LoadBalancer
