markant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp
  annotations:
    # This tell cert-manager to use the ClusterIssuer named letsencrypt-sample
    cert-manager.io/cluster-issuer: letsencrypt-traefik
spec:
  rules:
    - host: "darko3.prodyna.wtf"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: myapp
                port:
                  number: 80
  tls:
    - hosts:
        - "darko3.prodyna.wtf"
      secretName: myapp-tls
